--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,44 @@
+body {
+    background-color: #f5efe6;
+}
+
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.canvas {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    margin: 0;
+    border-style: ridge;
+    border-color: brown;
+
+}
+
+.canvasRow {
+    display: flex;
+    flex-direction: row;
+}
+
+.pixel {
+   background: white; 
+   border-style: solid;
+   border-width: 1px;
+   border-color: grey; 
+   width: 20px; 
+   height: 20px;
+}
+
+.colored {
+    background: black; 
+    border-style: solid;
+    border-width: 1px;
+    border-color: grey; 
+    width: 20px; 
+    height: 20px;
+}
+
+.pixel:hover {
+    background-color: rgb(163, 163, 163);
+  }
