--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #f5efe6;
 }
 
@@ -7,18 +10,25 @@ h1 {
 }
 
 .canvas {
+    width: 450px;
+    height: 450px;
     display: flex;
     flex-direction: column;
-    padding: 10px;
-    margin: 0;
+    justify-items: center;
+    padding: 0;
+    margin: 0 10px;
     border-style: ridge;
+    border-width: 20px;
     border-color: brown;
-
 }
 
 .canvasRow {
     display: flex;
     flex-direction: row;
+    flex: 1 1 auto;
+    justify-items: stretch;
+    margin: 0;
+    padding: 0;
 }
 
 .pixel {
@@ -26,8 +36,7 @@ h1 {
    border-style: solid;
    border-width: 1px;
    border-color: grey; 
-   width: 20px; 
-   height: 20px;
+   flex: 1 1 auto;
 }
 
 .colored {
@@ -35,10 +44,17 @@ h1 {
     border-style: solid;
     border-width: 1px;
     border-color: grey; 
-    width: 20px; 
-    height: 20px;
 }
 
 .pixel:hover {
-    background-color: rgb(163, 163, 163);
+    background-color: #cccaca;
   }
+
+.palette {
+    border-style: ridge;
+    border-color: brown;
+}
+
+.workspace{
+    display: flex;
+}
