--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+p {
+    margin: 0;
+}
+
 .canvas {
     width: 450px;
     height: 450px;
@@ -116,9 +120,19 @@ body {
 
 .palette {
     max-height: 474px;
+    display: flex;
+    flex-direction: column;
     border-style: ridge;
     border-color: #954520;
     padding: 5px;
+}
+
+.paletteOption {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin: 0;
+    align-items: center;
 }
 
 .sandwich {
@@ -126,6 +140,12 @@ body {
     color:#f5efe6;
     background-color: #4f200f;
     padding: 5px 10px;
+}
+
+.swatch {
+    width: 10px;
+    height: 10px;
+    background-color: red;
 }
 
 .workspace {
