--- a/styles.css
+++ b/styles.css
@@ -137,9 +137,12 @@ p {
 
 .sandwich {
     width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
     color:#f5efe6;
     background-color: #4f200f;
-    padding: 5px 10px;
+    padding: 10px 10px 10px 10px;
 }
 
 .swatch {
